--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/a2.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>C-54 Mining</title>
+    <title>C-54 Hometech</title>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
   </head>
   <body>
